Simple overflow fix

--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -1,9 +1,11 @@
 body {
   height: 100%;
   width: 100%;
+  overflow: hidden;
 }
 
 #appObject {
   height: 100vh;
   width: 100vw;
+
 }
